guestbook/istio-ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: guestbook
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "argocd.example.com"
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-virtual-service
  namespace: guestbook
spec:
  gateways:
  - argocd-gateway
  hosts:
  - "argocd.example.com"
  http:
  - name: istio-guestbook-route
    route:
    - destination: # service
        host: guestbook-ui
        port:
          number: 80
